* Wed Jan 04 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.1-0
- Strong typed module
- Updated for Puppet 4
- Changed validate cmd to be valid

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
- Removed unnecessary pupmod-simp-rsync dependency

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Minor cleanup

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Fri Aug 05 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.2-0
- Updated the user_specification docs and spec.

* Mon Jul 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Migration to semantic versioning and fix of the build system

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-3
- migration to simplib and simpcat (lib/ only)

* Thu Sep 03 2015 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-2
- Removed use of lsb facts.  Updated travis framework to match
  skeleton.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-1
- Changed puppet-server requirement to puppet

* Fri Apr 11 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-0
- Removed the sudo::pull_remote class.

* Wed Feb 12 2014 Kendall Moore <kmoore@keywcorp.com> - 2.1.0-0
- Updated templates to use native booleans instead of strings.

* Tue Jan 14 2014 Nick Markowski <nmarkowski@keywcorp.com> - 2.1.0-0
- Updated module for puppet3/hiera compatibility, lint tests, rspec tests.

* Mon Oct 07 2013 Kendall Moore <kmoore@keywcorp.com> - 2.0.0-9
- Updated all erb templates to properly scope variables.

* Wed Oct 02 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-8
- Use 'versioncmp' for all version comparisons.

* Thu Sep 12 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.7
- Updated the example documentation to note that authpriv should be
  used instead of auth so that syslog picks it up properly.

* Mon Feb 25 2013 Maintenance
2.0-6